--- a/package.json
+++ b/package.json
@@ -12,6 +12,16 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "*",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.3.5",
+    "express-session": "*",
+    "http": "0.0.0",
+    "morgan": "^1.6.0",
+    "mongodb": "*",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0"
   }
 }
