--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^2.5.6",
-    "express": "^4.15.2",
-    "nodemon": "^1.11.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "*",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.5",
+    "ejs": "^2.5.6",
+    "express": "^4.15.2",
     "express-session": "*",
     "http": "0.0.0",
-    "morgan": "^1.6.0",
     "mongodb": "*",
+    "mongoose": "^4.9.1",
+    "morgan": "^1.6.0",
+    "nodemon": "^1.11.0",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0"
   }
