--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "express-session": "*",
     "http": "0.0.0",
     "mongodb": "*",
-    "mongoose": "^4.9.1",
+    "mongoose": "*",
     "morgan": "^1.6.0",
+    "mpromise": "^0.5.5",
     "nodemon": "^1.11.0",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0"
