--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "*",
     "http": "0.0.0",
     "mongodb": "*",
+    "mongodb-migrations": "^0.8.5",
     "mongoose": "*",
     "morgan": "^1.6.0",
     "mpromise": "^0.5.5",
